<resources>
    <string name="app_name">BillBuddy</string>

    <string name="example_bill_name">Water Bill</string>
    <string name="name_label">name</string>
    <string name="amount_label">amount</string>
    <string name="note_label">note</string>
    <string name="save">SAVE</string>
    <string name="empty_not_saved">not saved</string>
    <string name="example_amount">$1234.12</string>
    <string name="example_due_date">August 20</string>
    <string name="due_date_label">due date</string>
    <string name="monthly_income_label">monthly income (after taxes)</string>
    <string name="dollar_sign">$</string>
    <string name="settings">Settings</string>
    <string name="delete_all">Delete All</string>
    <string name="sort">Sort</string>
</resources>
