<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/name_tv"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <EditText
            android:id="@+id/name_et"
            android:layout_below="@+id/name_tv"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/amount_tv"
            android:layout_below="@+id/name_et"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/amount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <EditText
            android:id="@+id/amount_et"
            android:layout_below="@+id/amount_tv"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/note_tv"
            android:layout_below="@+id/amount_et"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/note_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <EditText
            android:id="@+id/note_et"
            android:lines="5"
            android:layout_below="@+id/note_tv"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/save_button"
            android:text="@string/save"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</RelativeLayout>