<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/name_tv"
            android:textColor="@color/colorAccent"
            android:labelFor="@+id/name_et"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <EditText
            android:id="@+id/name_et"
            android:inputType="textAutoComplete|textAutoCorrect"
            android:layout_below="@+id/name_tv"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/amount_tv"
            android:textColor="@color/colorAccent"
            android:labelFor="@id/amount_et"
            android:layout_below="@+id/name_et"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/amount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <EditText
            android:id="@+id/amount_et"
            android:inputType="numberDecimal"
            android:layout_below="@+id/amount_tv"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/note_tv"
            android:textColor="@color/colorAccent"
            android:labelFor="@+id/note_et"
            android:layout_below="@+id/amount_et"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/note_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <EditText
            android:id="@+id/note_et"
            android:inputType="textAutoComplete|textAutoCorrect"
            android:lines="5"
            android:layout_below="@+id/note_tv"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/due_date_tv"
            android:textColor="@color/colorAccent"
            android:layout_below="@+id/note_et"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/due_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <ImageButton
            android:id="@+id/due_date_button"
            android:contentDescription="@string/due_date_label"
            android:layout_below="@+id/due_date_tv"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_due_date"
            android:layout_width="75dp"
            android:layout_height="75dp"/>

    <TextView
            android:id="@+id/due_date_value"
            android:layout_below="@+id/due_date_tv"
            android:layout_toEndOf="@+id/due_date_button"
            android:layout_marginTop="36dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:text="@string/example_due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/save_button"
            android:text="@string/save"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            style="@style/Widget.AppCompat.ButtonBar"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</RelativeLayout>